k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valideat-frontend
spec:
  selector:
    app: valideat-frontend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
